--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Login to Google Container Registry
-        run: echo $GCP_SERVICE_ACCOUNT | docker login -u _json_key --password-stdin gcr.io
+        run: docker login -u _json_key -p $(echo $GCP_SERVICE_ACCOUNT) gcr.io
       - name: Build Image
         run: docker build . -t gcr.io/synchthia-network/actions-test:latest
       - name: Push Image
