--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Login to Google Container Registry
         env:
           GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-        run: docker login -u _json_key -p $(echo $GCP_SERVICE_ACCOUNT) gcr.io
+        run: docker login -u _json_key -p "$(echo $GCP_SERVICE_ACCOUNT)" gcr.io
       - name: Build Image
         run: docker build . -t gcr.io/synchthia-network/actions-test:latest
       - name: Push Image
